css file added on home content

--- a/Home-page.css
+++ b/Home-page.css
@@ -68,3 +68,13 @@
     }
     
     /* <!--NAVIGATION CONTAINER END--> */
+
+    /* <!--Home container start--> */
+
+    
+    
+    .carousel-item
+    {
+        border-radius: 10%;
+        overflow: hidden;
+    }
