--- a/Home-page.css
+++ b/Home-page.css
@@ -79,11 +79,6 @@
         background-size: cover;
     }
 
-    .caption-container
-    {
-        margin-top: 3rem;
-    }
-
     .caption-container h3
     {
         font-family: 'josefin sans';
@@ -99,9 +94,18 @@
         font-weight: bold;
         letter-spacing: 0.3rem;
     }
+
+    .caption-container span
+    {
+        font-size: 3rem;
+        font-weight: bold;
+        letter-spacing: 0.1rem;
+    }
     
     .carousel-item
     {
         border-radius: 10%;
         overflow: hidden;
     }
+
+    /* <!--Home container end--> */
