--- a/Home-page.css
+++ b/Home-page.css
@@ -109,3 +109,14 @@
     }
 
     /* <!--Home container end--> */
+
+    /* <!--About container start--> */
+
+    .logo-container img
+    {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    /* <!--About container end--> */
