--- a/Css file/normalize.css
+++ b/Css file/normalize.css
@@ -119,3 +119,41 @@
 }
 
 /* <!--Home container end--> */
+
+/* <!--Footer start--> */
+
+.footer-container
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 20vh;
+    justify-content: space-evenly;
+}
+
+.footer-container .icons-container .social-media-icons
+{
+    display: flex;
+    list-style-type: none;
+    justify-content: space-between;
+    font-size: 25px;
+    width: 20rem;
+}
+
+.footer-container .icons-container .social-media-icons li a
+{
+    color: #797979;
+}
+
+.footer-container .icons-container .social-media-icons li a:hover
+{
+    color:#FF0D80;
+}
+
+.footer-container .copyright
+{
+    width: 20rem;
+    color: #797979;
+}
+
+/* <!--Footer end--> */
