--- a/Css file/normalize.css
+++ b/Css file/normalize.css
@@ -7,76 +7,93 @@
         box-sizing: border-box;
     }
 
-    @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+/* <!--NAVIGATION CONTAINER START--> */
 
-    *
-    {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-    }
+.nav-container .navbar-brand .kathys-text 
+{
+    font-family: 'josefin sans';
+    text-transform: uppercase;
+    color: #FF0D80;
+}
 
-    /* <!--NAVIGATION CONTAINER START--> */
+.nav-container .bw-text
+{
+    font-family: 'josefin sans';
+    text-transform: uppercase;
+    color: #8B2696;
+    font-weight: 1000;
+    letter-spacing: 2px;
+}
 
-    .nav-container .navbar-brand .kathys-text 
-    {
-        font-family: 'josefin sans';
-        text-transform: uppercase;
-        color: #FF0D80;
-    }
+.navbar-nav .nav-item .nav-link
+{
+    text-transform: uppercase;
+    font-family: 'poppins';
+    font-weight: 1000;
+    color: #797979;
+}
 
-    .nav-container .bw-text
-    {
-        font-family: 'josefin sans';
-        text-transform: uppercase;
-        color: #8B2696;
-        font-weight: 1000;
-        letter-spacing: 2px;
-    }
+.navbar-nav .nav-item .nav-link:hover
+{
+    color: #FF0D80;
+}
 
-    .navbar-nav .nav-item .nav-link
-    {
-        text-transform: uppercase;
-        font-family: 'poppins';
-        font-weight: 1000;
-        color: #797979;
-    }
+.nav-link
+{
+    position: relative;
+}
 
-    .navbar-nav .nav-item .nav-link:hover
-    {
-        color: #FF0D80;
-    }
+.nav-link::after
+{
+    content: '';
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    border-radius: 25%;
+    background-color: #8B2696;
+}
 
-    .nav-link
-    {
-        position: relative;
-    }
+.nav-link::after
+{
+    transform: scale(0,1);
+    transform-origin: 0 100%;
+    transition: transform 0.3s ease-in-out;
+}
 
-    .nav-link::after
-    {
-        content: '';
-        position: absolute;
-        width: 100%;
-        left: 0;
-        bottom: 0;
-        height: 2px;
-        border-radius: 25%;
-        background-color: #8B2696;
-    }
+.nav-link:hover::after
+{
+    transform: scale(1,1);
+}
 
-    .nav-link::after
-    {
-        transform: scale(0,1);
-        transform-origin: 0 100%;
-        transition: transform 0.3s ease-in-out;
-    }
+/* <!--NAVIGATION CONTAINER END--> */
 
-    .nav-link:hover::after
-    {
-        transform: scale(1,1);
-    }
-    
-    /* <!--NAVIGATION CONTAINER END--> */
+/* <!--Header caption--> */
+
+.caption-header
+{
+    display: flex;
+    align-items: center;
+    background-color: #797979;
+    height: 20vh;
+}
+
+.caption-header .container
+{
+    display: flex;
+    justify-content: center;
+    color: #fff;
+}
+
+.caption-header .container .caption-details
+{
+    text-transform: uppercase;
+    letter-spacing: 0.5rem;
+
+}
+
+/* <!--Header caption--> */
 
 /* <!--Home container start--> */
 
