--- a/Css file/responsive.css
+++ b/Css file/responsive.css
@@ -14,6 +14,11 @@
         {
             margin-top: 20px;
         }
+
+        .col-sm-12
+        {
+            margin-bottom: 20px;
+        }
     }
 
     @media only screen and (max-width: 1200px)
